TAG: qcreports_db-6-0-24-2
DATE: 07/12/2024
STAFF: lec
wts2-1521/fl2-924/Strain Check by Strain Repository ID; make case insensitive
#       modified:   PRB_StrainRepoCheck.py

TAG: qcreports_db-6-0-24-1
TAG: qcreports_db-6-0-23-29
DATE: 07/10/2024
STAFF: jer
wts2-1486/fl2-911 Don't display Reset button unless there is a form.
wts2-1486/fl2-911 Enable file upload. Required major rewrite.

TAG: qcreports_db-6-0-23-28
DATE: 07/02/2024
STAFF: lec
wts2-1512/fl2-913/emageload retire/qcr.shtml

TAG: qcreports_db-6-0-23-27
DATE: 06/27/2024
STAFF: lec
wts2-1486/fix reoombinase bug/GXD_IndexOverviewUber.py

TAG: qcreports_db-6-0-23-26
TAG: qcreports_db-6-0-23-25
DATE: 06/25/2024
STAFF: lec
fixed vocload; should use ldb=15 not ldb=191
wts2-1399/fl2-905/OMIM to MIM change broke 2 DO reports
#       modified:   VOC_OMIMDOMult.py
#       modified:   VOC_OMIMDOObsolete.py

TAG: qcreports_db-6-0-23-24
DATE: 06/12/2024
STAFF: lec
wts2-1492/fl2-861/change the run frequency of some GXD QC reports and rearrange list to reflect this new run frequency
#       renamed:    weekly/GXD_DupPrimers.sql -> mgd/GXD_DupPrimers.sql
#       renamed:    mgd/GXD_FullCodeable.py -> weekly/GXD_FullCodeable.py
#       renamed:    mgd/GXD_Images.py -> weekly/GXD_Images.py
#       renamed:    mgd/GXD_LackingImages.py -> weekly/GXD_LackingImages.py
#       renamed:    mgd/GXD_WithdrawnMarker.py -> weekly/GXD_WithdrawnMarker.py

TAG: qcreports_db-6-0-23-23
DATE: 06/06/2024
STAFF: lec
wts2-1483/fl2-894/more exclusions for References QC 5. J#s missing PDF’s
#       modified:   monthly/BIB_MissingPDFs.sql

TAG: qcreports_db-6-0-23-22
DATE: 05/29/2024
STAFF: lec
wts2-1480/fl2-876/move BIB Missing DOI from weekly to daily
#       renamed:    weekly/BIB_MissingDOI.sql -> mgd/BIB_MissingDOI.sql

TAG: qcreports_db-6-0-23-21
DATE: 05/28/2024
STAFF: lec
wts2-1403/fl2-732/Change of OMIM prefix to MIM in MGI: back end

TAG: qcreports_db-6-0-23-20
TAG: qcreports_db-6-0-23-19
DATE: 04/29/2024
STAFF: lec,jer