@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-24-?
+DATE: 08/19/2024
+STAFF: lec
+wts2-1536/fl2-950/QC report/GXD HT missing annotations to RNA seq experiment variants
+#       new file:   mgd/GXD_HTRNASeq.py
+
 TAG: qcreports_db-6-0-24-2
 DATE: 07/12/2024
 STAFF: lec
